--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@ body {
 }
 
 .wrapper {
-  width: 40vw;
-  min-width: 350px;
+  width: 50vw;
+  max-width: 700px;
+  min-width: 320px;
   background: #e0f7f5;
   border-radius: 20px;
-  padding: 30px;
+  padding: 40px 30px;
   box-shadow: 0 0 40px rgba(0,0,0,0.15);
   text-align: center;
 }
+
 
 .card h2 {
   font-size: 30px;
@@ -81,9 +83,9 @@ footer {
   <div class="card">
     <h2>Thiệp Cưới</h2>
     <div class="heart"></div>
-    <p><strong>Minh & Quỳnh</strong></p>
+    <p><strong>Quang Thiết & Nie Quỳnh</strong></p>
     <p>Trân trọng kính mời</p>
-    <p>📅 20 / 02 / 2026</p>
+    <p>📅 18 / 03 / 2028</p>
     <p>📍 Trung tâm Hội nghị Diamond, TP.HCM</p>
     <footer>Hân hạnh được đón tiếp 💖</footer>
   </div>
